--- a/style.css
+++ b/style.css
@@ -113,8 +113,15 @@ img {
   border-radius: 1rem;
 }
 .article-img {
-  width: 90%;
+  height: 400px;
+  width: 300px;
 }
+.article-img-img {
+  width: 300px;
+  height: 400px;
+  object-fit: cover;
+}
+
 .article-title {
   margin: 1rem 0 2rem 0;
 }
@@ -147,6 +154,10 @@ img {
   background-color: #f72b2b;
   color: #fff;
 }
+button {
+  font-family: 'Poppins', sans-serif;
+  cursor: pointer;
+}
 .article-title {
   text-transform: uppercase;
 }
@@ -159,6 +170,14 @@ footer {
 }
 
 .footer {
+  display: grid;
+  grid-template-columns: 2fr 3fr 2fr 2fr;
+  font-size: 0.825rem;
+  grid-gap: 2rem;
+  color: #fefefe;
+  padding: 2rem 0;
+}
+.footer2 {
   display: grid;
   grid-template-columns: 2fr 3fr 2fr 2fr;
   font-size: 0.825rem;
@@ -188,11 +207,13 @@ footer {
 }
 
 .item-img {
-  width: 50%;
+  width: 60%;
+  height: 600px;
 }
 
 .item-img img {
   width: 100%;
+  height: 600px;
 }
 
 .counter {
